// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Column expression components in materialized view renders column expression components in materialized view with default options 1`] = `
<div
  className="euiFlexItem euiFlexItem--flexGrowZero"
>
  <div
    className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="euiPopover euiPopover--anchorDownLeft"
        id="columnFunctionExpression-1"
      >
        <div
          className="euiPopover__anchor"
        >
          <button
            className="euiExpression euiExpression-isClickable euiExpression-isUppercase euiExpression--success"
            onClick={[Function]}
          >
            <span
              className="euiExpression__description"
            />
             
            <span
              className="euiExpression__value"
            >
              count(field1)
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="euiPopover euiPopover--anchorDownLeft"
        id="columnFunctionExpressionAlias-1"
      >
        <div
          className="euiPopover__anchor"
        >
          <button
            className="euiExpression euiExpression-isClickable euiExpression-isUppercase euiExpression--accent"
            onClick={[Function]}
          >
            <span
              className="euiExpression__description"
            >
              AS
            </span>
             
          </button>
        </div>
      </div>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="delete-column-expression"
        className="euiButtonIcon euiButtonIcon--danger euiButtonIcon--empty euiButtonIcon--small"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonIcon__icon"
          focusable="false"
          height={16}
          role="img"
          style={null}
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Column expression components in materialized view renders column expression components in materialized view with different options 1`] = `
<div
  className="euiFlexItem euiFlexItem--flexGrowZero"
>
  <div
    className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="euiPopover euiPopover--anchorDownLeft"
        id="columnFunctionExpression-2"
      >
        <div
          className="euiPopover__anchor"
        >
          <button
            className="euiExpression euiExpression-isClickable euiExpression-isUppercase euiExpression--success"
            onClick={[Function]}
          >
            <span
              className="euiExpression__description"
            />
             
            <span
              className="euiExpression__value"
            >
              sum(field2)
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="euiPopover euiPopover--anchorDownLeft"
        id="columnFunctionExpressionAlias-2"
      >
        <div
          className="euiPopover__anchor"
        >
          <button
            className="euiExpression euiExpression-isClickable euiExpression-isUppercase euiExpression--accent"
            onClick={[Function]}
          >
            <span
              className="euiExpression__description"
            >
              AS
            </span>
             
          </button>
        </div>
      </div>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="delete-column-expression"
        className="euiButtonIcon euiButtonIcon--danger euiButtonIcon--empty euiButtonIcon--small"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="euiIcon euiIcon--medium euiIcon--inherit euiButtonIcon__icon"
          focusable="false"
          height={16}
          role="img"
          style={null}
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 3h5v1H0V3h5V1a1 1 0 0 1 1-1h4a1 1 0 0 1 1 1v2Zm-7.056 8H7v1H4.1l.392 2.519c.042.269.254.458.493.458h6.03c.239 0 .451-.189.493-.458l1.498-9.576H14l-1.504 9.73c-.116.747-.74 1.304-1.481 1.304h-6.03c-.741 0-1.365-.557-1.481-1.304l-1.511-9.73H9V5.95H3.157L3.476 8H8v1H3.632l.312 2ZM6 3h4V1H6v2Z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
